--- a/css/desktop.css
+++ b/css/desktop.css
@@ -173,4 +173,28 @@
     width: 168px;
     height: 88px;
   }
+
+  /* FOOTER  */
+
+  footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .footer.container {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 1128px;
+  }
+  .footer-box {
+    /* width: 264px; */
+  }
+  .footer-media {
+    margin-left: 120px;
+    text-align: left;
+  }
+  .footer-subscribe {
+    margin-left: auto;
+    margin-top: 0;
+  }
 }
