--- a/css/mobile.css
+++ b/css/mobile.css
@@ -198,35 +198,6 @@ header > .container {
   height: 22px;
 }
 
-.logo-footer {
-  display: inline-block;
-
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--light);
-  text-decoration: none;
-}
-.footer-logo {
-  display: block;
-  margin-bottom: 16px;
-  margin-right: 76px;
-
-  color: var(--primary-brand);
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.33;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  text-decoration: none;
-}
 /* ----------LOGO-------------- */
 header {
   border-bottom: 1px solid var(--accent);
@@ -473,21 +444,59 @@ header {
 
 /* FOOTER  */
 
+.logo-footer {
+  display: inline-block;
+
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--light);
+  text-decoration: none;
+}
+.footer-logo {
+  display: block;
+  margin-bottom: 16px;
+  margin-right: 0;
+
+  color: var(--primary-brand);
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+}
+
 footer {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 
   background-color: var(--dark);
 }
 .footer {
-  width: 264px;
+  width: 300px;
   color: var(--accent);
+}
+.footer-box {
+  width: 268px;
 }
 .footer.container {
   display: flex;
+  flex-wrap: wrap;
 }
 .footer-media {
-  margin-left: 120px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 72px;
+  text-align: center;
 }
 .media-logo {
   font-weight: 500;
@@ -523,6 +532,69 @@ footer {
   width: 24px;
   height: 24px;
 }
+
+/* Footer Subscription */
+
+.footer-subscribe {
+  /* display: flex;
+  flex-wrap: wrap; */
+  margin-left: auto;
+  margin-top: 72px;
+  width: 396px;
+}
+.subscribe-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  width: 165px;
+  height: 40px;
+  border-color: transparent;
+  border-radius: 4px;
+  background-color: var(--primary-brand);
+  color: var(--white);
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-button:hover,
+.subscribe-button:focus {
+  background-color: var(--hover);
+}
+
+.subscription-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin-top: 16px;
+  gap: 24px;
+}
+.subscribe-input {
+  width: 264px;
+  height: 40px;
+  padding: 16px 8px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.subscribe-input::placeholder {
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+/* /Footer Subscription */
 
 .backdrop {
   position: fixed;
@@ -567,64 +639,6 @@ footer {
   visibility: hidden;
   pointer-events: 0;
 }
-
-/* Footer Subscription */
-
-.footer-subscribe {
-  margin-left: auto;
-}
-.subscribe-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
-  width: 165px;
-  height: 40px;
-  border-color: transparent;
-  border-radius: 4px;
-  background-color: var(--primary-brand);
-  color: var(--white);
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.subscribe-button:hover,
-.subscribe-button:focus {
-  background-color: var(--hover);
-}
-
-.subscription-wrap {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 16px;
-  gap: 24px;
-}
-.subscribe-input {
-  width: 264px;
-  height: 40px;
-  padding: 16px 8px;
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  color: rgba(255, 255, 255, 0.6);
-}
-.subscribe-input::placeholder {
-  line-height: 2;
-  letter-spacing: 0.04em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-/* /Footer Subscription */
 
 /* Modal window */
 .modal {
