--- a/css/mobile.css
+++ b/css/mobile.css
@@ -117,10 +117,6 @@ header > .container {
 }
 /* ----------------Sections--------- */
 
-/* -------icons of Customers section----- */
-
-/* -------/icons of Customers section----- */
-
 .portfolio-container {
   padding-top: 96px;
   padding-bottom: 120px;
@@ -139,23 +135,15 @@ header > .container {
 
 .filters {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: left;
   gap: 24px;
   margin-bottom: 72px;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* ----------------Sections--------- */
-
-/* ----------LOGO-------------- */
-/* header > .container {
-  display: flex;
-  flex-wrap: nowrap;
-} */
 .logo {
-  /* margin-right: 76px; */
-
   color: var(--primary-brand);
   font-family: 'Raleway';
   font-style: normal;
@@ -596,6 +584,8 @@ footer {
 
 /* /Footer Subscription */
 
+/* MODAL  */
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -605,46 +595,16 @@ footer {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal {
-  position: absolute;
-  width: 408px;
-  height: 576px;
-  left: 50%;
-  top: 50%;
-  background-color: var(--moda-bg);
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  padding: 24px;
-  transform: translate(-50%, -50%);
-}
-.data-modal-close {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  cursor: pointer;
-  background-color: transparent;
-  border-color: transparent;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  background: var(--accent);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: 0;
 }
-
-/* Modal window */
 .modal {
   position: absolute;
-  width: 408px;
-  height: 584px;
+  width: 94%;
+  height: 95%;
   left: 50%;
   top: 50%;
   background-color: var(--moda-bg);
@@ -762,7 +722,9 @@ footer {
 }
 
 .form-label {
-  display: inline-block;
+  display: block;
+  margin-top: 8px;
+
   margin-bottom: 4px;
   color: var(--light-slate);
 }
@@ -808,16 +770,6 @@ footer {
   align-items: center;
   justify-content: center;
 }
-/* .comment-label {
-  display: flex;
-  margin-left: 8px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.04em;
-
-  color: #757575;
-} */
 
 .terms-check {
   display: flex;
@@ -831,7 +783,6 @@ footer {
 .check-label {
   display: flex;
   align-items: center;
-  gap: 8px;
 }
 
 .check-text {
@@ -883,6 +834,103 @@ footer {
 .submit-button:hover,
 .submit-button:focus {
   background-color: var(--hover);
+}
+
+/* MOBILE-MENU  */
+
+.mob-menu > .container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+  padding: 0;
+}
+
+.mob-menu {
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  top: 0;
+  position: fixed;
+  padding: 40px;
+  z-index: 1;
+}
+
+.menu-close {
+  margin-left: auto;
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-color: transparent;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background: var(--accent);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.close-icon {
+}
+
+.mob-menu-list {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
+
+.mob-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.mob-menu-link {
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-decoration: none;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--dark);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-link.contacts {
+  color: var(--primary-brand);
+}
+
+.mob-menu-link:hover,
+.mob-menu-link:focus {
+  color: var(--hover);
+}
+
+.mob-menu-tel {
+  display: block;
+  margin-bottom: 40px;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  text-transform: capitalize;
+  text-decoration: none;
+  color: var(--primary-brand);
+}
+.mob-menu-mail {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--text);
+}
+.mob-soc-links {
+  display: flex;
+  margin-top: 48px;
+  justify-content: space-between;
+}
+.mob-soc-item {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--primary-brand);
 }
 
 /* MEDIA  */
@@ -997,5 +1045,20 @@ footer {
     height: 88px;
     border: 1px solid #8e8f99;
     border-radius: 4px;
+  }
+
+  .modal {
+    position: absolute;
+    width: 392px;
+    height: 586px;
+    left: 50%;
+    top: 50%;
+    background-color: var(--moda-bg);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    padding-top: 72px;
+    padding-bottom: 24px;
+    transform: translate(-50%, -50%);
   }
 }
