--- a/css/tablet.css
+++ b/css/tablet.css
@@ -179,4 +179,29 @@
   .subscription-wrap {
     flex-wrap: nowrap;
   }
+
+  /* MODAL  */
+
+ .modal {
+  /* position: absolute;
+  width: 408px;
+  height: 586px;
+  left: 50%;
+  top: 50%;
+  background-color: var(--moda-bg);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  
+  transform: translate(-50%, -50%); */
+}
+
+.filters {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
 }
