--- a/css/mobile.css
+++ b/css/mobile.css
@@ -855,6 +855,8 @@ footer {
   position: fixed;
   padding: 40px;
   z-index: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-close {
