--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,16 +1,13 @@
 /* MEDIA  */
 
 @media screen and (min-width: 1200px) {
-  .container {
-    width: 1158px;
-  }
   .logo {
     margin-right: 76px;
   }
 
   .container {
-    margin-left: auto;
-    margin-right: auto;
+    /* margin-left: auto;
+    margin-right: auto; */
     width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
@@ -74,7 +71,10 @@
         url(../img/hero/hero-bg-2x.jpg);
     }
   }
-
+  /* .hero > .container {
+    margin-left: 0;
+    margin-right: 0;
+  } */
   .hero-title {
     margin-top: 0;
     margin-bottom: 48px;
@@ -86,7 +86,7 @@
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-
+    text-align: center;
     color: var(--white);
   }
   section {
@@ -97,6 +97,12 @@
   .benefits-content {
     flex-direction: row;
     flex-wrap: nowrap;
+  }
+  .benefits-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
   }
 
   /* BENEFITS  */
@@ -125,6 +131,7 @@
     font-size: 20px;
     font-weight: 500;
     line-height: 1.2;
+    text-align: left;
   }
 
   /* DOING  */
@@ -189,13 +196,20 @@
   .footer-box {
     /* width: 264px; */
   }
+
+  .footer-logo {
+    text-align: left;
+  }
   .footer-media {
     margin-left: 120px;
+    margin-right: 80px;
     text-align: left;
   }
   .footer-subscribe {
+    text-align: left;
     margin-left: auto;
     margin-top: 0;
+    width: 453px;
   }
 
   /* MODAL  */
@@ -203,7 +217,7 @@
   .modal {
     position: absolute;
     width: 408px;
-    height: 576px;
+    height: 584px;
     left: 50%;
     top: 50%;
   }
