--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,6 +10,9 @@ section {
   padding-top: 96px;
   padding-bottom: 96px;
 }
+.no-scroll {
+  overflow: hidden;
+}
 
 /* ------Main navigation ---------*/
 .main-nav {
@@ -475,6 +478,7 @@ footer {
 }
 .footer-box {
   width: 268px;
+  margin: 0 auto;
 }
 .footer.container {
   display: flex;
@@ -524,9 +528,11 @@ footer {
 /* Footer Subscription */
 
 .footer-subscribe {
+  text-align: center;
   /* display: flex;
   flex-wrap: wrap; */
   margin-left: auto;
+  margin-right: auto;
   margin-top: 72px;
   width: 396px;
 }
@@ -840,6 +846,7 @@ footer {
 
 .mob-menu > .container {
   height: 100%;
+  width: 100;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -860,7 +867,7 @@ footer {
 }
 
 .menu-close {
-  margin-left: auto;
+  margin-left: 220px;
   margin-bottom: 16px;
   display: flex;
   justify-content: center;
@@ -897,7 +904,7 @@ footer {
 }
 
 .mob-menu-link.contacts {
-  color: var(--primary-brand);
+  color: var(--hover);
 }
 
 .mob-menu-link:hover,
@@ -927,6 +934,7 @@ footer {
   display: flex;
   margin-top: 48px;
   justify-content: space-between;
+  width: 220px;
 }
 .mob-soc-item {
   width: 40px;
@@ -1013,7 +1021,7 @@ footer {
 
 @media screen and (min-width: 480px) {
   .container {
-    display: flex;
+    /* display: flex; */
     justify-content: space-between;
     width: 480px;
     padding-left: 16px;
@@ -1062,5 +1070,105 @@ footer {
     padding-top: 72px;
     padding-bottom: 24px;
     transform: translate(-50%, -50%);
+  }
+
+  /* MOBILE-MENU  */
+
+  .mob-menu > .container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+    padding: 0;
+  }
+
+  .mob-menu {
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+    top: 0;
+    position: fixed;
+    padding: 40px;
+    z-index: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-close {
+    margin-left: 364px;
+    margin-bottom: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-color: transparent;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: var(--accent);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .close-icon {
+  }
+
+  .mob-menu-list {
+    margin-top: 0;
+    margin-bottom: 50px;
+  }
+
+  .mob-menu-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+
+  .mob-menu-link {
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-decoration: none;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--dark);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .mob-menu-link.contacts {
+    color: var(--hover);
+  }
+
+  .mob-menu-link:hover,
+  .mob-menu-link:focus {
+    color: var(--hover);
+  }
+
+  .mob-menu-tel {
+    display: block;
+    margin-bottom: 40px;
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.11;
+    text-transform: capitalize;
+    text-decoration: none;
+    color: var(--primary-brand);
+  }
+  .mob-menu-mail {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+    color: var(--text);
+  }
+  .mob-soc-links {
+    display: flex;
+    margin-top: 48px;
+    justify-content: space-between;
+    width: 328px;
+  }
+  .mob-soc-item {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--primary-brand);
   }
 }
