--- a/css/tablet.css
+++ b/css/tablet.css
@@ -163,6 +163,15 @@
     /* width: 428px; */
   }
 
+  .customers .icon-svg {
+    fill: #8e8f99;
+    display: flex;
+    width: 190px;
+    height: 88px;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+  }
+
   /* FOOTER  */
 
   .footer.container {
